plugins {
	id 'fabric-loom' version '0.10-SNAPSHOT'
	id 'maven-publish'
}

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

archivesBaseName = "VirtualAspectRatio-1.16"
version = "1.0"

repositories {
	maven { url "https://maven.terraformersmc.com/releases" }
	maven { url "https://api.modrinth.com/maven" }
}

dependencies {
	minecraft "com.mojang:minecraft:1.16.5"
	mappings "net.fabricmc:yarn:1.16.5+build.10:v2"
	modImplementation "net.fabricmc:fabric-loader:0.12.12"
	modImplementation "net.fabricmc.fabric-api:fabric-api:0.42.0+1.16"
	modImplementation "com.terraformersmc:modmenu:1.16.22"
	modRuntimeOnly "maven.modrinth:lazydfu:0.1.2"
}

processResources {
	inputs.property "version", project.version
	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.encoding = "UTF-8"
	if (JavaVersion.current().isJava9Compatible()) {
		it.options.release = 8
	}
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.archivesBaseName}"}
	}
}